# RMCS

./: -rw-r--r-- 1 root root 24452023 May 22 0  .clang-format  .clang-tidy  .clangd  .env  .gitignore  .gitmodules  .nvimlog  178_id  178_id.pub  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  FORCE_CALIBRATION_FEATURE.md  KALMAN_IMPLEMENTATION_GUIDE.md  LICENSE  PREREQUISITE.md  README.md  code-plan.md  conversation-2026-03-28-130546.md  conversation-2026-03-29-010437.md  deformable_infantry_omni_active_suspension_flow.md  docker-compose.yml  engineer_single_side_schematic.urdf  force_sensor_recording.md  friction_data.csv  gimbal_sweep_20260316_summary.json  gimbal_torque_sweep_20260316_round2_trimmed_15s_summary.json  install  ip.conf  librmcs-firmware-c_board-3.1.0.dfu  librmcs-firmware-c_board-3.2.0-beta.0.dfu  librmcs-firmware-c_board-3.2.0.dfu  librmcs-firmware-rmcs_board-lite-3.2.0-beta.0.dfu  librmcs-firmware-rmcs_board-lite-3.2.0.dfu  librmcs-sdk-3.0.0-beta.2-amd64-release.deb  librmcs-v3-migration.md  package-lock.json  (+9 more)
RMCS/rmcs_ws/src/hikcamera/: CMakeLists.txt  README.md  package.xml
librmcs-sdk-src-3.1.0-beta.1/host/: CMakeLists.txt
librmcs-sdk-src-3.1.0-beta.1/host/src/utility/: assert.cpp  final_action.hpp
rmcs_ws/src/arm_description/: CMakeLists.txt  package.xml
rmcs_ws/src/arm_description/config/: joint_names_arm_description.yaml
rmcs_ws/src/arm_description/launch/: demo.display.py  display.launch.py
rmcs_ws/src/arm_description/meshes/: Link3.STL  Link5.STL  Link6.STL  base_link.STL  link_2.STL  link_4.STL  link_5.STL  link_6.STL
rmcs_ws/src/arm_description/urdf/: arm_description.csv  arm_description.urdf
rmcs_ws/src/auto_aim_test/: CMakeLists.txt  package.xml  plugins.xml
rmcs_ws/src/auto_aim_test/config/: auto_aim_test.yaml
rmcs_ws/src/auto_aim_test/launch/: auto_aim_test.launch.py
rmcs_ws/src/auto_aim_test/src/: bmi088.hpp  component.cpp  hikcamera.hpp  imu_ekf.hpp  linear_sync_model.hpp  main.cpp  test.cpp  trigger_board.hpp
rmcs_ws/src/omni_description/: CMakeLists.txt  package.xml
rmcs_ws/src/omni_description/launch/: display.launch  gazebo.launch  view_omni.launch.py
rmcs_ws/src/omni_description/meshes/: body.STL  gimbol_pitch.STL  gimbol_yaw.STL  right_launch.STL
rmcs_ws/src/omni_description/urdf/: omni.urdf.xacro  omni_description.csv  omni_description.urdf
rmcs_ws/src/omni_infantry_chasis_controller/: CMakeLists.txt  omni_infantry_chasis_controller.xml  package.xml
rmcs_ws/src/omni_infantry_chasis_controller/include/: chasiscontroll.hpp  pid.hpp
rmcs_ws/src/omni_infantry_chasis_controller/src/: chasiscontroll.cpp  omni_infantry_chasis_controller.cpp  omni_infantry_chasis_controller.yaml
rmcs_ws/src/omni_infantry_chasis_controller/test/: omni_infantry_chasis_controller_params.yaml  omni_infantry_chasis_controller_preceeding_params.yaml  test_load_omni_infantry_chasis_controller.cpp  test_omni_infantry_chasis_controller.cpp  test_omni_infantry_chasis_controller.hpp  test_omni_infantry_chasis_controller_preceeding.cpp
rmcs_ws/src/referee_serial/: CMakeLists.txt  package.xml
rmcs_ws/src/referee_serial/src/: referee_serial.cpp
rmcs_ws/src/rm_msgs/: CMakeLists.txt  package.xml
rmcs_ws/src/rm_msgs/msg/: RemoteControl.msg
rmcs_ws/src/rmcs_bringup/: CMakeLists.txt  package.xml
rmcs_ws/src/rmcs_bringup/config/: .mavros_bridge.yaml.swp  A_to_B.yaml  auto_aim_test.yaml  calibration.yaml  camera.yaml  chassis.yaml  climbable-infantry.yaml  climber_engineer.yaml  communication.yaml  copy.yaml  dart-filling-test.yaml  dart-guidance-v2.yaml  dart-guidance.yaml  dart-launch-full.yaml  dart-launch.yaml  dart-launcher.yaml  dart-pitch-pid.yaml  dart-remot-bridge-test.yaml  dart.yaml  dart_test.yaml  dart_vision_test.yaml  dartlauncher.yaml  deformable-infantry-chassis-v2.yaml  deformable-infantry-omni-b.yaml  deformable-infantry-omni-c.yaml  deformable-infantry-omni-joint-id.yaml  deformable-infantry-omni.yaml  deformable-infantry-steering.yaml  deformable-infantry-v2.yaml  deformable-infantry.yaml  differential-sampler.yaml  double_pid_motor.yaml  dual_yaw_test.yaml  ec.yaml  engineer.yaml  filter.yaml  find_angle.yaml  flight-booster.yaml  flight-sweep.yaml  flight.yaml  (+51 more)
rmcs_ws/src/rmcs_bringup/launch/: auto.launch.py  ec.launch.py  new.infantry.launch.py  old.infantry.launch.py  omni.launch.py  rmcs.launch.py  sentry.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
rmcs_ws/src/rmcs_controller/: CMakeLists.txt  package.xml  rmcs_controller.xml
rmcs_ws/src/rmcs_controller/include/: pid.hpp
rmcs_ws/src/rmcs_controller/src/: main.cpp  rmcs_controller.cpp  rmcs_controller.yaml
rmcs_ws/src/rmcs_controller/test/: rmcs_controller_params.yaml  rmcs_controller_preceeding_params.yaml  test_load_rmcs_controller.cpp  test_rmcs_controller.cpp  test_rmcs_controller.hpp  test_rmcs_controller_preceeding.cpp
rmcs_ws/src/rmcs_core/: CMakeLists.txt  package.xml  plugins.xml
rmcs_ws/src/rmcs_dart_guidance/: CMakeLists.txt  package.xml  plugins.xml
rmcs_ws/src/rmcs_dart_guidance/test/: debug_image_display.cpp  get_camera_parameter.cpp  image_publisher.cpp  image_saving_test.cpp
rmcs_ws/src/rmcs_datas/: CMakeLists.txt  package.xml
rmcs_ws/src/rmcs_dev_inputmanager/: CMakeLists.txt  package.xml  plugins.xml
rmcs_ws/src/rmcs_executor/: CMakeLists.txt  README.md  package.xml
rmcs_ws/src/rmcs_utility/: CMakeLists.txt
rmcs_ws/src/serial/: CMakeLists.txt  package.xml
rmcs_ws/src/serial_deliver/: CMakeLists.txt  package.xml
rmcs_ws/src/serial_util/: CMakeLists.txt  package.xml
rmcs_ws/src/sp_vision_25/: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  autostart.sh  buff_layout.xml  mpc_layout.xml  package.xml  plugins.xml  readme.md
rmcs_ws/src/sp_vision_25/src/: uav.cpp  (+14 more)
rmcs_ws/src/test_controller/: CMakeLists.txt  package.xml
rmcs_ws/src/week3/: CMakeLists.txt  package.xml
tests/: CMakeLists.txt  Pnpsolver.cpp  test_main.cpp
tests/docker/: ubuntu22.04.test.dockerfile
tests/mocks/: MockArmor2D.hpp  MockArmorInWorld.hpp  mock_camera_tranform.hpp
(+1543 files in other folders)
