<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_description</name>
  <version>1.0.0</version>
  <description> URDF Description package for arm_description This package contains configuration
    data, 3D models and launch files for arm_description robot </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rosidl_default_generators</build_depend>


  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>

    <build_type>ament_cmake</build_type>

  </export>
</package>